--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <a href="https://github.com/FirozAhmed01766762474"><i class="fa-brands fa-square-github"></i></a>
                     <a href="https://www.linkedin.com/in/firoz-ahmed-272065241/"><i class="fa-brands fa-linkedin"></i></a>  
                 </div>
-                <a href="img/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="img/Firoz_Ahmed_KUET_CSE.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contract-right">
                 <form name="submit-to-google-sheet">
